test/error/scan/RealScaleTooBig.mod
MODULE RealScaleTooBig;

CONST x = 1.0E513;

END RealScaleTooBig.
